Thay đổi tên webstie trên file index.html

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
         <!-- --------------- HEADER --------------- -->
         <nav id="header">
             <div class="nav-logo">
-                <p class="nav-name">Doe</p>
+                <p class="nav-name">Hoàng</p>
                 <span>.</span>
             </div>
             <div class="nav-menu" id="myNavMenu">
