Thay đổi link đường dẫn

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
      <!-- UNICONS -->
      <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
      <!-- CSS -->
-     <link rel="stylesheet" href="./style.css">
+     <link rel="stylesheet" href="./asset/style.css">
      <!-- Add favicon -->
      <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./asset/style.css">
 </head>
 <body>
     <div class="container">
@@ -78,7 +78,7 @@
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="./profile.png" alt="avatar">
+                        <img src="./asset/profile.png" alt="avatar">
                     </div>
                 </div>
                 <div class="scroll-icon-box">
@@ -253,6 +253,6 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- ----- MAIN JS ----- -->
-    <script src="script.js"></script>
+    <script src="asset/script.js"></script>
 </body>
 </html>
